--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,6 +20,65 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+<div class="container">
+    <header class="header">
+        <a href="/" class="header-logo">
+            <img src="img/logo.png" class="header-logo__media" alt="">
+            <span class="header-logo__title">Школа дизайна интерьера</span>
+            <span class="header-logo__text">Российский Государственный Университет <br> им. А.Н. Косыгина</span>
+        </a>
+        <div class="header-info">
+            <div class="header-support">
+                <div class="header-support__contact">
+                    <a href="tel:+74952011300" class="header-support__contact-phone" rel="nofollow"><span class="header-support__contact-phone--code">+7
+                        (495)</span> <span class="text-bold">201-13-00</span></a>
+                    <div class="header-support__contact-address">г. Москва, Садовническая ул. 33</div>
+                </div>
+                <div class="header-social">
+                    <a href="#" class="header-social__item header-social__item-youtube" rel="nofollow" target="_blank">
+                        <svg class="header-social__icon">
+                            <use xlink:href="img/icons.svg#youtube"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="header-social__item header-social__item-facebook" rel="nofollow" target="_blank">
+                        <svg class="header-social__icon">
+                            <use xlink:href="img/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="#" class="header-social__item header-social__item-instagram" rel="nofollow" target="_blank">
+                        <svg class="header-social__icon">
+                            <use xlink:href="img/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+            <form class="header-form call-form">
+                <div class="header-form__group form-group-prepend">
+                    <label class="sr-only" for="call-form__name">Ваше имя</label>
+                    <svg class="form-group-prepend__icon">
+                        <use xlink:href="img/icons.svg#user"></use>
+                    </svg>
+                    <input type="text" id="call-form__name" class="form-group-prepend__field form-control hide-placeholder" placeholder="Представтесь" required>
+                    <div class="invalid-feedback">Введите ваше имя</div>
+                </div>
+
+                <div class="header-form__group form-group-prepend">
+                    <label class="sr-only" for="call-form__tel">Контактный телефон*</label>
+                    <svg class="form-group-prepend__icon">
+                        <use xlink:href="img/icons.svg#phone"></use>
+                    </svg>
+                    <input type="tel" id="call-form__tel" class="form-group-prepend__field form-control hide-placeholder" placeholder="+7 (___) ___-__-__" required>
+                    <div class="invalid-feedback">Заполните номер телефона</div>
+                </div>
+
+                <button type="button" class="header-form__btn btn-primary btn">ЖДУ ЗВОНКА</button>
+            </form>
+        </div>
+    </header>
+</div>
+
+
+<script src="js/scripts.min.js"></script>
 
 </body>
 </html>
