Created menu block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -75,6 +75,14 @@
             </form>
         </div>
     </header>
+    <ul class="menu">
+        <li class="menu-item"><a href="#" class="menu-link">О школе</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Очное обучение</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Дистанционное обучение</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Трудоустройство</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Мастер-классы</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+    </ul>
 </div>
 
 
