Created main-info block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -83,6 +83,92 @@
         <li class="menu-item"><a href="#" class="menu-link">Мастер-классы</a></li>
         <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
     </ul>
+
+    <div class="main-info">
+        <div class="main-info-slider">
+            <div class="main-info-slider__init">
+                <div>
+                    <a href="#"><img src="img/example/01.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/02.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/03.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/04.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/05.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/06.jpg" alt=""></a>
+                </div>
+                <div>
+                    <a href="#"><img src="img/example/07.jpg" alt=""></a>
+                </div>
+            </div>
+
+            <div class="main-info-slider__control">
+                <div class="main-info-slider__nav">
+                    <div aria-label="Previous" class="main-info-slider__prev" id="glider-prev"></div>
+                    <div aria-label="Next" class="main-info-slider__next" id="glider-next"></div>
+                </div>
+                <div class="main-info-slider__dots"></div>
+            </div>
+        </div>
+        <ul class="services">
+            <li class="services-item">
+                <a href="/kursy_dizayna_interyera" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курсы Дизайна интерьера
+                </a>
+            </li>
+            <li class="services-item">
+                <a href="/kursy_dizayna_interyera_mebeli" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курсы дизайна интерьера и&nbsp;мебели
+                </a>
+            </li>
+            <li class="services-item">
+                <a href="/kurs_dizayn_zagorodnogo_doma" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курс Дизайн загородного дома и&nbsp;ландшафта
+                </a>
+            </li>
+            <li class="services-item">
+                <a href="/kursy_dizayner_dekorator" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курсы Дизайнер-декоратор
+                </a>
+            </li>
+            <li class="services-item">
+                <a href="/kursy_dizayner_oformitel" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курсы Дизайнер-оформитель
+                </a>
+            </li>
+            <li class="services-item">
+                <a href="/kursy_keramiki" class="services-link">
+                    <svg class="services-icon">
+                        <use xlink:href="img/icons.svg#education"></use>
+                    </svg>
+                    Курсы декоративно-прикладного искусства
+                </a>
+            </li>
+        </ul>
+    </div>
 </div>
 
 
