Created content block

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -169,6 +169,65 @@
             </li>
         </ul>
     </div>
+
+    <article class="content">
+        <h1>Школа дизайна интерьера</h1>
+        <p>
+            Школа Дизайна Интерьера существует в&nbsp;нашем университете последние 90&nbsp;лет.
+        </p>
+
+        <p>
+            Мы&nbsp;совмещаем академическое образование в&nbsp;области дизайна и&nbsp;новейшие программные продукты, такие как Adobe Photoshop, Autodesk 3D&nbsp;Studio Max, ArchiCAD и&nbsp;Artlantis.
+        </p>
+
+        <p>
+            Обучение Дизайнеров Интерьера и&nbsp;Дизайнеров загородного дома и&nbsp;ландшафта проходит по&nbsp;выверенному годами учебному плану.
+        </p>
+
+        <p>
+            Вначале, идёт художественный блок, состоящий из&nbsp;таких предметов, как рисунок и&nbsp;живопись, цветоведения, композиции, истории искусств и&nbsp;истории стилей.
+        </p>
+
+        <p>
+            Для дизайнеров интерьера и&nbsp;ландшафта, важно понимание гармоничных цветовых и&nbsp;композиционных сочетаний цветов и&nbsp;объемов, и&nbsp;вы&nbsp;научитесь делать это &laquo;на&nbsp;автомате&raquo;.
+        </p>
+
+        <p>
+            Умение рисовать очень важно, для дизайнеров интерьера. Это поможет вам рисовать в&nbsp;компьютерных программах, понимать, законы построения перспективы, делать необходимые наброски в&nbsp;присутствии заказчика.
+        </p>
+
+        <h2>Что изучают в школе дизайна интерьера</h2>
+
+        <p>В&nbsp;Школе Дизайна Интерьера в&nbsp;Москве вы&nbsp;освоите современные компьютерные программы, такие как Adobe Photoshop, Autodesk 3D&nbsp;Studio Max, ArchiCAD и&nbsp;Artlantis.</p>
+
+        <p>Знание программы Adobe Photoshop позволит вам без труда собирать необходимые коллажи, для демонстрации ваших идей заказчику, показать сочетания различных предметов интерьера, и&nbsp;цветовую гамму, создавать начальные эскизы и&nbsp;дорабатывать визуализации.</p>
+
+        <p>В&nbsp;программе Autodesk 3D&nbsp;Studio Max вы&nbsp;сможете создавать трехмерные модели мебели и&nbsp;оригинальных авторских аксессуаров&nbsp;&mdash; тех элементов, которые сделают разработанный вами дизайн оригинальным и&nbsp;запоминающимся.</p>
+
+        <p>Выпускная квалификационная работа выполняется в&nbsp;программе ArchiCAD. В&nbsp;этой программе вы&nbsp;вычертите все необходимые планы: начальный план помещения, план переноса ненесущих стен, план зонирования, планы раскладки пола и&nbsp;план потолка, планы разводки электричества, план размещения светильников и&nbsp;план расстановки мебели. В&nbsp;программе ArchiCAD Вы&nbsp;так&nbsp;же создадите трехмерную модель проектируемой квартиры со&nbsp;всеми деталями интерьера и&nbsp;предметами мебели, а&nbsp;в&nbsp;программе Artlantis завершите визуализацию, наложив на&nbsp;созданные вами объемы цвета и&nbsp;фактуры.</p>
+
+        <p>Так&nbsp;же большой блок занимает Проектирование и&nbsp;черчение. Вы&nbsp;научитесь проводить обмеры помещения, чертить планы и&nbsp;делать макеты в&nbsp;объеме. На&nbsp;занятиях по&nbsp;Проектированию вы&nbsp;разработаете несколько небольших проектов, перед тем, как перейти к&nbsp;дипломной работе. Сегодня, чаще всего, чертежи помещения делаются в&nbsp;программах, например в&nbsp;программе ArchiCAD, но, тем не&nbsp;менее, каждый специалист должен уметь выполнить чертеж руками. Вы&nbsp;должны знать и&nbsp;уметь читать &laquo;язык чертежей&raquo;, все специальные обозначения. Вы&nbsp;должны уметь грамотно и&nbsp;профессионально выполнить обмеры и&nbsp;составить план помещения&nbsp;&mdash; часто это работа происходит в&nbsp;присутствии заказчика. Так&nbsp;же, в&nbsp;присутствии заказчика или нескольких сразу, вам часто требуется набросать план помещения и&nbsp;пояснить на&nbsp;нем свои идеи, или зарисовать&nbsp;то, что хочет от&nbsp;вас заказчик. Для всего этого вам необходимо знание черчения.</p>
+
+        <p>На&nbsp;материаловедении вы&nbsp;познакомитесь со&nbsp;всеми современными строительными и&nbsp;отделочными материалами. Красками, декоративными покрытиями, керамическими плитками и&nbsp;множеством других материалов и&nbsp;покрытий. Вас ознакомят с&nbsp;основными фирмами&nbsp;&mdash; поставщиками рынка дизайнерских услуг. Кроме общего материаловедения в&nbsp;Школе Дизайна Интерьера постоянно проводятся мастер-классы от&nbsp;крупнейших российских и&nbsp;мировых компаний. Ведущие специалисты этих компаний расскажут и&nbsp;покажут вам как с&nbsp;помощью их&nbsp;материалов и&nbsp;технологий можно создать уникальные и&nbsp;современные решения в&nbsp;области дизайна интерьера.</p>
+
+        <p>На&nbsp;занятиях &laquo;Текстиль в&nbsp;интерьере&raquo; вы&nbsp;познакомитесь с&nbsp;видами и&nbsp;моделями штор и&nbsp;аксессуарами к&nbsp;ним&nbsp;&mdash; тесьмой, бахромой, кистями. Вы&nbsp;сможете грамотно провести замеры окон у&nbsp;заказчика, сделать эскизы, подобрать необходимые ткани и&nbsp;рассчитать их&nbsp;размер.</p>
+
+        <p>Огромное значение в&nbsp;Школе Дизайна Интерьера придается вашей выпускной квалификационной работе&nbsp;&mdash; диплому. Ваша дипломная работа это начало вашего портфолио. В&nbsp;первую очередь, нужно сделать реальный проект. Вы&nbsp;можете делать объект собственной недвижимости и&nbsp;под наблюдением преподавателей (ведущий диплома) претворить в&nbsp;жизнь все свои фантазии и&nbsp;желания. Так&nbsp;же вы&nbsp;можете найти своего заказчика сами, или мы&nbsp;предоставим вам вашего первого заказчика.</p>
+
+        <p>В&nbsp;дальнейшем, вы&nbsp;можете подписаться на&nbsp;наш бесплатный сервис&nbsp;&mdash; проектное бюро&nbsp;&mdash; и&nbsp;получать заказы на&nbsp;дизайн интерьера , ландшафта, оформление выставок , декорирование сценических площадок и&nbsp;др.</p>
+
+        <p>Партнёры нашей школы Мэрия Москвы, Экспо Центр, Миг Недвижимость.</p>
+
+        <p>Школа Дизайна Интерьера предоставит вам прекрасную возможность для саморазвития. Для наших студентов и&nbsp;выпускников мы&nbsp;предлагаем БЕСПЛАТНЫЕ ЗАНЯТИЯ ПО&nbsp;ЖИВОПИСИ И&nbsp;РИСУНКУ.</p>
+
+        <p>Школа Дизайна Интерьера надеется стать вашим другом навсегда.</p>
+
+        <p>Всех наших выпускников мы&nbsp;приглашаем бесплатно посещать мастер-классы от&nbsp;ведущих компании по&nbsp;покрытиям, отделочным материалам, электрике и&nbsp;домашнему оборудованию.</p>
+    </article>
+
+    <footer class="footer">
+
+    </footer>
 </div>
 
 
