Created table version

--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,2 +1,68 @@
+<footer class="footer">
+    <div class="footer-top">
+        <ul class="footer-social">
+            <li class="footer-social__item">
+                <a href="#" class="footer-social__link">
+                    <svg class="footer-social__icon footer-social__icon-youtube">
+                        <use xlink:href="img/icons.svg#youtube"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer-social__item">
+                <a href="#" class="footer-social__link">
+                    <svg class="footer-social__icon footer-social__icon-facebook">
+                        <use xlink:href="img/icons.svg#facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="footer-social__item">
+                <a href="#" class="footer-social__link">
+                    <svg class="footer-social__icon footer-social__icon-instagram">
+                        <use xlink:href="img/icons.svg#instagram"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+
+        <form action="/" class="form-subscribe">
+            <div class="form-group-prepend">
+                <label class="sr-only" for="call-form__email">Ваш e-mail</label>
+                <svg class="form-group-prepend__icon">
+                    <use xlink:href="img/icons.svg#email"></use>
+                </svg>
+                <input type="text" id="call-form__email"
+                       class="form-group-prepend__field form-control hide-placeholder" placeholder="Введите e-mail" required>
+                <div class="invalid-feedback">Введите Ваш e-mail</div>
+            </div>
+            <button type="button" class="form-subscribe__btn btn-primary btn">Подписаться на рассылку</button>
+        </form>
+    </div>
+    <div class="footer-info">
+        <div class="footer-contact">
+            <div>Телефон приёмной комиссии:</div>
+            <a href="tel:+74952011300" class="footer-contact__phone" rel="nofollow">+7 (495) 201-13-00</a>
+        </div>
+        <div class="footer-contact">
+            <div>Телефон по административным вопросам:</div>
+            <a href="tel:+79258066003" class="footer-contact__phone" rel="nofollow">+7 925 806-60-03</a>
+        </div>
+        <div class="footer-pay">
+            <div class="footer-pay__text">Онлайн оплата курсов за обучение:</div>
+            <a href="#" class="footer-pay__card" rel="nofollow">
+                <img src="img/pay/mir.svg" class="footer-pay__mir" alt="Платежная карта МИР">
+                <img src="img/pay/visa.svg" class="footer-pay__visa" alt="Платежная карта Visa">
+                <span class="footer-pay__mastercard">
+                        <img src="img/pay/mastercard.svg" class="footer-pay__mastercard-media" alt="Платежная карта MasterCard">
+                        mastercard
+                    </span>
+            </a>
+        </div>
+    </div>
+    <div class="footer-copy">©2020 ФГБОУ ВО РГУ им. А.Н. Косыгина | Наш адрес: г. Москва,ул. Садовническая, д. 33, стр.1, ауд. №214</div>
+</footer>
+</div>
+
 
 <script src="js/scripts.min.js"></script>
+</body>
+</html>
