Created mobile version

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -78,11 +78,14 @@
         </form>
     </div>
 </header>
-<ul class="menu">
-    <li class="menu-item"><a href="#" class="menu-link">О школе</a></li>
-    <li class="menu-item"><a href="#" class="menu-link">Очное обучение</a></li>
-    <li class="menu-item"><a href="#" class="menu-link">Дистанционное обучение</a></li>
-    <li class="menu-item"><a href="#" class="menu-link">Трудоустройство</a></li>
-    <li class="menu-item"><a href="#" class="menu-link">Мастер-классы</a></li>
-    <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
-</ul>
+<nav class="nav-wrap">
+    <ul class="menu">
+        <li class="menu-item"><a href="#" class="menu-link">О школе</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Очное обучение</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Дистанционное обучение</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Трудоустройство</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Мастер-классы</a></li>
+        <li class="menu-item"><a href="#" class="menu-link">Контакты</a></li>
+    </ul>
+    <div class="nav-close">Закрыть</div>
+</nav>
