Created desktop page version

--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -7,7 +7,7 @@
     <title>Курсы дизайна интерьера</title>
     <meta name="description" content="Курсы дизайна интерьера">
 
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.min.css?ver=1.1">
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
